k8s-spec/dev/discord-bot-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-bot-dev
  namespace: ore-dev
  labels:
    app: discord-bot
    tier: frontend
    env: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-bot
      tier: frontend
      env: development
  template:
    metadata:
      labels:
        app: discord-bot
        tier: frontend
        env: development
    spec:
      containers:
      - name: ore-discord-bot-dev
        image: boyroywax/ore-discord-bot-dev
        resources:
          requests:
            memory: "256Mi"
            cpu: "150m"
          limits:
            memory: "512Mi"
            cpu: "300m"
      restartPolicy: Always
