k8s-spec/dev/callback-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ore-callback-d
  namespace: ore-dev
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
      name: http
  selector:
    app: discord-callback
    tier: backend
    env: development
---
