k8s-spec/dev/discord-callback-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-callback
  namespace: ore-dev
  labels:
    app: discord-callback
    tier: backend
    env: development
spec:
  replicas: 3
  selector:
    matchLabels:
      app: discord-callback
      tier: backend
      env: development
  template:
    metadata:
      labels:
        app: discord-callback
        tier: backend
        env: development
    spec:
      containers:
      - name: ore-discord-callback-dev
        image: boyroywax/ore-discord-callback-dev
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 53134
          name: ore-callback-d
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ore-callback-d
  namespace: ore-dev
spec:
  type: NodePort
  ports:
    - port: 53134
      protocol: TCP
      targetPort: 53134
      name: http
  selector:
    app: discord-callback
    tier: backend
    env: development
---
