k8s-spec/dev/discord-service-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-service
  namespace: ore-dev
  labels:
    app: discord-service
    tier: backend
    env: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-service
      tier: backend
      env: development
  template:
    metadata:
      labels:
        app: discord-service
        tier: backend
        env: development
    spec:
      containers:
      - name: ore-discord-service-dev
        image: boyroywax/ore-discord-service-dev
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
        ports:
        - containerPort: 53134
          name: ore-service-d
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
        startupProbe:
          httpGet:
            path: /liveness-check
            port: 53134
          failureThreshold: 5
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health-check
            port: 53134
          initialDelaySeconds: 5
          periodSeconds: 3
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /liveness-check
            port: 53134
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 2
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ore-service-d
  namespace: ore-dev
spec:
  type: NodePort
  ports:
    - port: 53134
      protocol: TCP
      targetPort: 53134
      name: http
  selector:
    app: discord-service
    tier: backend
    env: development
---
