k8s-spec/dev/service-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ore-service-d
  namespace: ore-dev
spec:
  type: LoadBalancer
  ports:
    - port: 53134
      protocol: TCP
      targetPort: 53134
      name: http
  selector:
    app: discord-service
    tier: backend
    env: development
---
