k8s-spec/dev/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress-dev
  namespace: ore-dev
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "dev-ore-discord-bot"
# spec:
#   rules:
#   - host: ore.cx
#     http:
#       paths:
#       - pathType: ImplementationSpecific
#         path: "/*"
#         backend:
#           service:
#             name: ore-callback-d
#             port:
#               name: http
spec:
  defaultBackend:
    service:
      name: ore-callback-d
      port:
        name: http
