k8s-spec/dev/service-ingress-static.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress-dev
  namespace: ore-dev
  annotations:
    networking.gke.io/managed-certificates: managed-cert-2-dev
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "s-ore-discord-bot"
spec:
  defaultBackend:
    service:
      name: ore-service-d
      port:
        name: http
  rules:
  - host: "cb.ore.network"
    http:
      paths:
      - pathType: Prefix
        path: "/serv"
        backend:
          service:
            name: ore-service-d
            port:
              name: http
# spec:
#   defaultBackend:
#     service:
#       name: ore-callback-d
#       port:
#         name: http
